update and remove unnecessary

--- a/client/src/app/admin/admin.component.html
+++ b/client/src/app/admin/admin.component.html
@@ -1,3 +1,4 @@
-<p>
-  admin works!
-</p>
+<app-login></app-login>
+<app-add-new></app-add-new>
+<app-update [videos]="videos" [video_headers]="video_headers"></app-update>
+<app-video-list-admin [videos]="videos" [video_headers]="video_headers"></app-video-list-admin>
