--- a/client/src/app/video/video.component.html
+++ b/client/src/app/video/video.component.html
@@ -5,3 +5,4 @@
 <app-search-bar></app-search-bar>
 <app-lists [videos]="videos" [video_headers]="video_headers" [customers]="customers"></app-lists>
 <app-user></app-user>
+<app-admin></app-admin>
