modify the front-end

--- a/client/src/app/video/add-new/add-new.component.html
+++ b/client/src/app/video/add-new/add-new.component.html
@@ -1,6 +1,5 @@
 <div>
     <h1>Add New Video - Admin Screen</h1>
-    <br>
   <form action="">
   <table>
     <tr>
@@ -36,8 +35,8 @@
       </td>
     </tr>
     <tr>
-      <td><button>Back</button></td>
-      <td><input type="submit" value="Add"></td>
+      <td><a routerLink="/admin/videos" class="btn btn-default">Back</a></td>
+      <td><a class="btn btn-default">Add</a></td>
     </tr>
   </table>
 </form>
