--- a/client/src/app/video/reserve/reserve.component.html
+++ b/client/src/app/video/reserve/reserve.component.html
@@ -35,8 +35,8 @@
       </td>
     </tr>
     <tr>
-      <td><button>Back</button></td>
-      <td><input type="submit" value="Reserve"></td>
+      <td><a routerLink="/" class="btn btn-default">Back</a></td>
+      <td><a class="btn btn-default">Reserve</a></td>
     </tr>
   </table>
 </form>
