--- a/client/src/app/video/update/update.component.html
+++ b/client/src/app/video/update/update.component.html
@@ -17,8 +17,6 @@
         <div>            
           <select name="genres" >
             <option value="0">Select a genre</option>
-            <!-- <option value="Available">Available</option>
-            <option value="Unavailable">Unavailable</option> -->
           </select>            
         </div>
       </td>
@@ -29,8 +27,6 @@
         <div>            
           <select name="ratings" >
             <option value="0">Select a rating</option>
-            <!-- <option value="Available">Available</option>
-            <option value="Unavailable">Unavailable</option> -->
           </select>            
         </div>
       </td>
@@ -51,8 +47,8 @@
       </td>
     </tr>
     <tr>
-      <td><button>Back</button></td>
-      <td><input type="submit" value="Reserve"></td>
+      <td><a routerLink="/admin/videos" class="btn btn-default">Back</a></td>
+      <td><a class="btn btn-default">Update</a></td>
     </tr>
   </table>
 </form>
