--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -1,11 +1,21 @@
-<br>
-<h1>Admin Login</h1>
-<div>
-  <form action="">
-    <label for="login">Login</label>
-    <input type="text" name="login_name"><br>
-    <label for="password">Password</label>
-    <input type="password" name="password"><br>
-    <input type="submit" value="Login">
-  </form>
+<div class="container-fluid">
+  <div>
+    <h2>Admin Login</h2>
+    <form action="/admin/videos">
+      <table>
+        <tr>
+          <td><label for="login">Login</label></td>
+          <th><input type="text" name="login_name"></th>
+        </tr>
+        <tr>
+          <td><label for="password">Password</label></td>
+          <th><input type="password" name="password"></th>
+        </tr>
+        <tr>
+          <td></td>
+          <td><input type="submit" value="Login"></td>
+        </tr>
+      </table>
+    </form>
+  </div>
 </div>
