--- a/client/src/app/video/video-list-admin/video-list-admin.component.html
+++ b/client/src/app/video/video-list-admin/video-list-admin.component.html
@@ -1,5 +1,7 @@
 <div>
   <h1>Video Listing - Admin Screen</h1>
+  <a routerLink="/admin/videos/add" class="btn btn-default">Add New Video</a>
+  <br>
   <table>
     <tr>
       <th *ngFor="let header of video_headers">{{header}}</th>
@@ -11,8 +13,8 @@
       <td>{{video.rating}}</td>
       <td>{{video.director}}</td>
       <td>{{video.status}}</td>
-      <td><input type="submit" value="Update"></td>
-      <td><input type="submit" value="Delete"></td>
+      <td><a routerLink="/admin/videos/update" class="btn btn-default">Update</a></td>
+      <td><a class="btn btn-default">Delete</a></td>
     </tr>    
   </table>
 </div>
