--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -14,6 +14,9 @@
     </div>
   </nav>
 </div>
-<router-outlet></router-outlet>
+<div class="container"> 
+  <flash-messages></flash-messages>
+  <router-outlet></router-outlet>
+</div>
 
   
