--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -3,12 +3,22 @@
     <div class="container-fluid">
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li><a routerLink="/admin/videos">Videos</a></li>
-          <li><a routerLink="/admin/customers">Customers</a></li>
+          <li *ngIf="!authService.loggedIn()">
+            <a routerLink="">Home</a>
+          </li>
+          <li *ngIf="authService.loggedIn()">
+            <a routerLink="/admin/videos">Videos</a>
+          </li>
+          <li *ngIf="authService.loggedIn()">
+            <a routerLink="/admin/customers">Customers</a></li>
           <li><a><app-search-bar></app-search-bar></a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a routerLink="/admin/login">Admin Login</a></li>
+          <li *ngIf="!authService.loggedIn()">
+            <a routerLink="/admin/login">Admin Login</a></li>
+          <li *ngIf="authService.loggedIn()"> 
+            <a (click)="onLogoutClick()"> Logout</a>
+          </li>
         </ul>
       </div>
     </div>
