fetch videos data from back-end using HTTP Angular

--- a/client/src/app/video/video-list/video-list.component.html
+++ b/client/src/app/video/video-list/video-list.component.html
@@ -1,5 +1,5 @@
 <div>
-  <table id="myTable">
+  <table id="myTable" *ngIf="videos !== null">
     <tr>
       <th *ngFor="let header of video_headers">{{header}}</th>
     </tr>    
@@ -16,4 +16,5 @@
       <ng-template #unavailable><p></p></ng-template>
     </tr>    
   </table>
+  
 </div>
