--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -1,15 +1,15 @@
 <div class="container-fluid">
   <div>
     <h2>Admin Login</h2>
-    <form action="/admin/videos">
+    <form (submit)="onLogin()">
       <table>
         <tr>
-          <td><label for="login">Login</label></td>
-          <th><input type="text" name="login_name"></th>
+          <td><label for="username">Username</label></td>
+          <th><input type="text" [(ngModel)]="username" name="username"></th>
         </tr>
         <tr>
           <td><label for="password">Password</label></td>
-          <th><input type="password" name="password"></th>
+          <th><input type="password" [(ngModel)]="password" name="password"></th>
         </tr>
         <tr>
           <td></td>
