--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,19 +1,7 @@
-<div class="container-fluid">
-  <nav class="nav navbar-default">
-    <div class="container-fluid">
-      <div class="collapse navbar-collapse">
-        <ul class="nav navbar-nav">
-          <li><a routerLink="/admin/videos">Videos</a></li>
-          <li><a routerLink="/admin/customers">Customers</a></li>
-          <li><a><app-search-bar></app-search-bar></a></li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-          <li><a routerLink="/admin/login">Admin Login</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+<div>
+  <app-navbar></app-navbar>
 </div>
 <router-outlet></router-outlet>
+
 
   
