--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -1,21 +1,12 @@
-<div class="container-fluid">
-  <div>
+<form (submit)="onLogin()">
     <h2>Admin Login</h2>
-    <form (submit)="onLogin()">
-      <table>
-        <tr>
-          <td><label for="username">Username</label></td>
-          <th><input type="text" [(ngModel)]="username" name="username"></th>
-        </tr>
-        <tr>
-          <td><label for="password">Password</label></td>
-          <th><input type="password" [(ngModel)]="password" name="password"></th>
-        </tr>
-        <tr>
-          <td></td>
-          <td><input type="submit" value="Login"></td>
-        </tr>
-      </table>
-    </form>
-  </div>
-</div>
+    <div class="form-group">
+      <label for="username">Username</label>
+      <input type="text" class="form-control" [(ngModel)]="username" name="username" placeholder="Enter email">
+    </div>
+    <div class="form-group">
+      <label for="password">Password</label>
+      <input type="password" class="form-control" [(ngModel)]="password" name="password" placeholder="Password">
+    </div>
+    <button type="submit" class="btn btn-primary">Login</button>
+  </form>
