--- a/client/src/app/video/add-new/add-new.component.css
+++ b/client/src/app/video/add-new/add-new.component.css
@@ -1,4 +1,6 @@
 table, th, td {
+  width: 50%;
+  margin-top: 30px;
+  align-content: center;
   border: 1px solid black;
-  border-collapse: collapse;
 }
