--- a/client/src/app/video/add-new/add-new.component.html
+++ b/client/src/app/video/add-new/add-new.component.html
@@ -1,33 +1,31 @@
-<div>
-    <h1>Add New Video - Admin Screen</h1>
-  <form action="">
-  <table>
+<form (submit)="addVideo()">
+  <table align="center" class="table">
     <tr>
       <td rowspan="7">Image</td>
-      <td>Title</td>
-      <td></td>
+      <td><b>Title</b></td>
+      <td><input type="text" class="form-control" [(ngModel)]="title" name="title" placeholder="Enter title"></td>
     </tr>
     <tr>
-      <td>Running Time</td>
-      <td></td>
+      <td><b>Running Time</b></td>
+      <td><input type="text" class="form-control" [(ngModel)]="runningTime" name="runningTime" placeholder="Enter running time"></td>
     </tr>
     <tr>
-      <td>Genre</td>
-      <td></td>
+      <td><b>Genre</b></td>
+      <td><input type="text" class="form-control" [(ngModel)]="genre" name="genre" placeholder="Enter genre"></td>
     </tr>
     <tr>
-      <td>Rating</td>
-      <td></td>
+      <td><b>Rating</b></td>
+      <td><input type="text" class="form-control" [(ngModel)]="rating" name="rating" placeholder="Enter rating"></td>
     </tr>
     <tr>
-      <td>Director</td>
-      <td></td>
+      <td><b>Director</b></td>
+      <td><input type="text" class="form-control" [(ngModel)]="director" name="director" placeholder="Enter director"></td>
     </tr>
     <tr>
-      <td>Status</td>
+      <td><b>Status</b></td>
       <td>
         <div>            
-          <select name="status" >
+          <select name="status" [(ngModel)]="status">
             <option value="Available">Available</option>
             <option value="Unavailable">Unavailable</option>
           </select>            
@@ -35,9 +33,9 @@
       </td>
     </tr>
     <tr>
-      <td><a routerLink="/admin/videos" class="btn btn-default">Back</a></td>
-      <td><a class="btn btn-default">Add</a></td>
+      <td><button class="btn btn-primary" (click)="goBack()">Back</button></td>
+      <td><button type="submit" class="btn btn-primary">Add</button></td>
     </tr>
   </table>
 </form>
-</div>  
+ 
