--- a/client/src/app/video/update/update.component.css
+++ b/client/src/app/video/update/update.component.css
@@ -1,4 +1,9 @@
 table, th, td {
+  width: 50%;
+  margin-top: 30px;
+  align-content: center;
   border: 1px solid black;
-  border-collapse: collapse;
+}
+#btnAdd {
+  margin: 0 45%;
 }
