--- a/client/src/app/video/video-list-admin/video-list-admin.component.css
+++ b/client/src/app/video/video-list-admin/video-list-admin.component.css
@@ -1,4 +1,8 @@
-table, th, td {
-  border: 1px solid black;
-  border-collapse: collapse;
+table {
+  width: 70%;
+  margin-top: 30px;
+  align-content: center;
+}
+#btnAdd {
+  margin: 0 45%;
 }
