--- a/client/src/app/video/video-list-admin/video-list-admin.component.html
+++ b/client/src/app/video/video-list-admin/video-list-admin.component.html
@@ -1,11 +1,10 @@
-<div>
-  <h1>Video Listing - Admin Screen</h1>
-  <a routerLink="/admin/videos/add" class="btn btn-default">Add New Video</a>
-  <br>
-  <table>
+<table align="center" class="table">
+  <thead class="thead-dark">
     <tr>
-      <th *ngFor="let header of video_headers">{{header}}</th>
+      <th scope="col" *ngFor="let header of video_headers">{{header}}</th>
     </tr>    
+  </thead>
+  <tbody>
     <tr *ngFor="let video of videos">
       <td>{{video.title}}</td>
       <td>{{video.runningTime}}</td>
@@ -13,8 +12,10 @@
       <td>{{video.rating}}</td>
       <td>{{video.director}}</td>
       <td>{{video.status}}</td>
-      <td><a routerLink="/admin/videos/update" class="btn btn-default">Update</a></td>
-      <td><a class="btn btn-default">Delete</a></td>
-    </tr>    
-  </table>
-</div>
+      <td><a routerLink="/admin/videos/update" class="btn btn-primary" role="button">Update</a></td>
+      <td><button class="btn btn-primary" (click)="onDelete()">Delete</button></td>
+    </tr>      
+  </tbody>  
+</table>
+<button id="btnAdd" routerLink="/admin/videos/add" class="btn btn-primary">Add New Video</button>
+
