--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<form (submit)="onLogin()">
+<form (submit)="onLoginSubmit()">
     <h2>Admin Login</h2>
     <div class="form-group">
       <label for="username">Username</label>
