--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,7 +1,10 @@
 <div>
   <app-navbar></app-navbar>
 </div>
-<router-outlet></router-outlet>
+<div class="container"> 
+  <flash-messages></flash-messages>
+  <router-outlet></router-outlet>
+</div>
 
 
   
