--- a/client/src/app/video/video-list-admin/video-list-admin.component.html
+++ b/client/src/app/video/video-list-admin/video-list-admin.component.html
@@ -5,7 +5,7 @@
     </tr>    
   </thead>
   <tbody>
-    <tr *ngFor="let video of videos">
+    <tr *ngFor="let video of videos | filter : searchText" >
       <td>{{video.title}}</td>
       <td>{{video.runningTime}}</td>
       <td>{{video.genre}}</td>
@@ -18,4 +18,3 @@
   </tbody>  
 </table>
 <button id="btnAdd" routerLink="/admin/videos/add" class="btn btn-primary">Add New Video</button>
-
