--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -11,24 +11,19 @@
     </ul>    
     
     <ul class="navbar-nav ml-auto right">
-      <form class="form-inline">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form> 
-      <!-- <div *ngIf="token == null; else loggedIn"> -->
+        <input (keyup)="onKey($event)" class="form-control mr-sm-2" type="search" placeholder="Search by title" aria-label="Search">
         <li *ngIf="!authService.loggedIn()" class="nav-item active">
           <a class="btn btn1" (click)="onLogin()" role="button" aria-pressed="true">Admin Login</a>
         </li>
         <li *ngIf="!authService.loggedIn()" class="nav-item">
           <a class="btn btn1" (click)="onRegister()" role="button" aria-pressed="true">Register</a>
         </li>
-      <!-- </div>     -->
-      <!-- <ng-template #loggedIn> -->
+
         <p *ngIf="authService.loggedIn()">Welcome {{username}}</p>
         <li *ngIf="authService.loggedIn()" class="nav-item">
           <a class="btn btn1" (click)="onLogoutClick()" role="button" aria-pressed="true">Log out</a>
         </li>
-      <!-- </ng-template>       -->
+      
   </ul>
   </div>
 </nav>
