--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -3,27 +3,28 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" routerLink="/admin/videos">Videos<span class="sr-only">(current)</span></a>
+        <a class="nav-link" routerLink="/admin/videos">Admin Videos<span class="sr-only">(current)</span></a>
       </li> 
       <li class="nav-item active">
-          <a class="nav-link" routerLink="/admin/customers">Customers<span class="sr-only">(current)</span></a>
+          <a class="nav-link" routerLink="/admin/customers">Admin Customers<span class="sr-only">(current)</span></a>
         </li>      
     </ul>    
     
     <ul class="navbar-nav ml-auto right">
-        <input (keyup)="onKey($event)" class="form-control mr-sm-2" type="search" placeholder="Search by title" aria-label="Search">
-        <li *ngIf="!authService.loggedIn()" class="nav-item active">
-          <a class="btn btn1" (click)="onLogin()" role="button" aria-pressed="true">Admin Login</a>
-        </li>
-        <li *ngIf="!authService.loggedIn()" class="nav-item">
-          <a class="btn btn1" (click)="onRegister()" role="button" aria-pressed="true">Register</a>
-        </li>
+      <input (keyup)="onKey($event)" class="form-control mr-sm-2" type="search" placeholder="Search by title" aria-label="Search">
+      <li *ngIf="!authService.loggedIn()" class="nav-item active">
+        <a class="btn btn1" (click)="onLogin()" role="button" aria-pressed="true">Admin Login</a>
+      </li>
+      <li *ngIf="!authService.loggedIn()" class="nav-item">
+        <a class="btn btn1" (click)="onRegister()" role="button" aria-pressed="true">Register</a>
+      </li>
 
-        <p *ngIf="authService.loggedIn()">Welcome {{username}}</p>
-        <li *ngIf="authService.loggedIn()" class="nav-item">
-          <a class="btn btn1" (click)="onLogoutClick()" role="button" aria-pressed="true">Log out</a>
-        </li>
-      
-  </ul>
+      <div class="dropdown show" *ngIf="authService.loggedIn()">
+        <a class="btn btn-secondary dropdown-toggle" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Welcome, {{username}}</a>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+          <a class="btn btn-secondary dropdown-item" role="button" (click)="onLogoutClick()">Log out</a>
+        </div>
+      </div>      
+    </ul>
   </div>
 </nav>
