--- a/client/src/app/video/video-list-admin/video-list-admin.component.html
+++ b/client/src/app/video/video-list-admin/video-list-admin.component.html
@@ -6,14 +6,15 @@
     <tr>
       <th *ngFor="let header of video_headers">{{header}}</th>
     </tr>    
-    <tr *ngFor="let video of videos">
+    <tr *ngFor="let video of videos; let i = index;">
       <td>{{video.title}}</td>
       <td>{{video.runningTime}}</td>
       <td>{{video.genre}}</td>
       <td>{{video.rating}}</td>
       <td>{{video.director}}</td>
-      <td>{{video.status}}</td>
-      <td><a routerLink="/admin/videos/update" class="btn btn-default">Update</a></td>
+      <td>{{video.status}} {{video._id}}</td>
+      
+      <td><a [routerLink]="['/admin/videos/update/', video._id]" class="btn btn-default">Update</a></td>
       <td><a class="btn btn-default">Delete</a></td>
     </tr>    
   </table>
