--- a/client/src/app/video/video-list-admin/video-list-admin.component.html
+++ b/client/src/app/video/video-list-admin/video-list-admin.component.html
@@ -13,7 +13,7 @@
       <td>{{video.director}}</td>
         <td>{{video.status}}</td>
         <td><a [routerLink]="['/admin/videos/update/', video._id]" class="btn btn-primary" role="button">Update</a></td>
-        <td><button class="btn btn-primary" (click)="onDelete()">Delete</button></td>
+        <td><button class="btn btn-danger" (click)="onDelete()">Delete</button></td>
       </tr>  
     </tbody>    
   </table>
