--- a/client/src/app/video/video-list-admin/video-list-admin.component.html
+++ b/client/src/app/video/video-list-admin/video-list-admin.component.html
@@ -2,6 +2,9 @@
   <thead class="thead-dark">
     <tr>
       <th scope="col" *ngFor="let header of video_headers">{{header}}</th>
+      <th colspan="2" scope="col">
+          <a routerLink="/admin/videos/add" class="btn btn-success" role="button"> Add new Video</a>
+        </th>
     </tr>    
   </thead>
   <tbody>
