--- a/client/src/app/video/video-list/video-list.component.html
+++ b/client/src/app/video/video-list/video-list.component.html
@@ -14,7 +14,7 @@
       <td>{{video.director}}</td>
       <td>{{video.status}}</td>
       <td *ngIf="video.status == 'Available'; else unavailable">
-        <a routerLink="/reserve" class="btn btn-primary" role="button">Reserve</a>
+        <a routerLink="/reserve/video._id" class="btn btn-primary" role="button">Reserve</a>
       </td>
       <ng-template #unavailable><p></p></ng-template>
     </tr>    
