--- a/client/src/app/video/reserve/reserve.component.html
+++ b/client/src/app/video/reserve/reserve.component.html
@@ -3,23 +3,23 @@
     <tr>
       <td rowspan="7">Image</td>
       <td>Title</td>
-      <td>{{videos[0].title}}</td>
+      <td>{{title}}</td>
     </tr>
     <tr>
       <td>Running Time</td>
-      <td>{{videos[0].runningTime}}</td>
+      <td>{{runningTime}}</td>
     </tr>
     <tr>
       <td>Genre</td>
-      <td>{{videos[0].genre}}</td>
+      <td>{{genre}}</td>
     </tr>
     <tr>
       <td>Rating</td>
-      <td>{{videos[0].rating}}</td>
+      <td>{{rating}}</td>
     </tr>
     <tr>
       <td>Director</td>
-      <td>{{videos[0].director}}</td>
+      <td>{{director}}</td>
     </tr>
     <tr>
       <td>Customer</td>
