--- a/client/src/app/video/update/update.component.html
+++ b/client/src/app/video/update/update.component.html
@@ -1,63 +1,61 @@
 <div>
   <h1>Update Video</h1>
   <form (submit)="onUpdateSubmit()">
-  <table align="center" class="table">
-    <tr>
-      <td rowspan="7">Image</td>
-      <td>Title</td>
-      <td> <input type="text" [(ngModel)]="title" name="title" ></td>
-    </tr>
-    <tr>
-      <td>Running Time</td>
-      <td> <input type="text" [(ngModel)]="runningTime" name="runningTime" ></td>
-    </tr>
-    <tr>
-      <td>Genre</td>
-      <td> <input type="text" [(ngModel)]="genre" name="genre" ></td>
-
-      <!-- <td>
-        <div>            
-          <select name="genres" >
-            <option value="0">Select a genre</option>
-          </select>            
-        </div>
-      </td> -->
-    </tr>
-    <tr>
-      <td>Rating</td>
-      <td> <input type="text" [(ngModel)]="rating" name="rating" ></td>
-
-      <!-- <td>
-        <div>            
-          <select name="ratings" >
-            <option value="0">Select a rating</option>
-          </select>            
-        </div>
-      </td> -->
-    </tr>
-    <tr>
-      <td>Director</td>
-      <td> <input type="text" [(ngModel)]="director" name="director" ></td>
-    </tr>
-    <tr>
-      <td>Status</td>
-      <td> <input type="text" [(ngModel)]="status" name="status" ></td>
-
-      <!-- <td>
-        <div>            
-          <select name="status" >
-            <option value="Available">Available</option>
-            <option value="Unavailable">Unavailable</option>
-          </select>            
-        </div>
-      </td> -->
-    </tr>
-    <tr>
-      <td><a routerLink="/admin/videos" class="btn btn-default">Back</a></td>
-      <!-- <td><a class="btn btn-default">Update</a></td> -->
-      <td> <input type="submit" class="btn btn-primary" value="Update"></td>
-    </tr>
-  </table>
-</form>
+    <table align="center" class="table">
+      <tr>
+        <td rowspan="7">Image</td>
+        <td>Title</td>
+        <td> <input type="text" [(ngModel)]="title" name="title" ></td>
+      </tr>
+      <tr>
+        <td>Running Time</td>
+        <td> <input type="text" [(ngModel)]="runningTime" name="runningTime" ></td>
+      </tr>
+      <tr>
+        <td>Genre</td>
+        <td>
+          <div>            
+            <select name="genre" [(ngModel)]="genre">
+              <option value="Action">Action</option>
+              <option value="Fantasy">Fantasy</option>
+              <option value="Fiction">Fiction</option>
+            </select>             
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td>Rating</td>
+        <td>
+          <div>            
+            <select name="rating" [(ngModel)]="rating">
+              <option value="1 star">1 star</option>
+              <option value="2 stars">2 stars</option>
+              <option value="3 star">3 stars</option>
+              <option value="4 stars">4 stars</option>
+              <option value="5 star">5 stars</option>
+            </select>             
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td>Director</td>
+        <td> <input type="text" [(ngModel)]="director" name="director" ></td>
+      </tr>
+      <tr>
+        <td>Status</td>
+        <td>
+          <div>            
+            <select name="status" [(ngModel)]="status">
+              <option value="Available">Available</option>
+              <option value="Unavailable">Unavailable</option>
+            </select>            
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td><a routerLink="/admin/videos" class="btn btn-primary" role="button">Cancel</a></td>
+        <td><input type="submit" class="btn btn-primary" value="Update"></td>
+      </tr>
+    </table>
+  </form>
 </div>
-<br>
