--- a/client/src/app/video/update/update.component.html
+++ b/client/src/app/video/update/update.component.html
@@ -17,8 +17,10 @@
           <div>            
             <select name="genre" [(ngModel)]="genre">
               <option value="Action">Action</option>
+              <option value="Adventure">Adventure</option>
+              <option value="Science">Science</option>
+              <option value="Fiction">Fiction</option>              
               <option value="Fantasy">Fantasy</option>
-              <option value="Fiction">Fiction</option>
             </select>             
           </div>
         </td>
@@ -30,9 +32,9 @@
             <select name="rating" [(ngModel)]="rating">
               <option value="1 star">1 star</option>
               <option value="2 stars">2 stars</option>
-              <option value="3 star">3 stars</option>
+              <option value="3 stars">3 stars</option>
               <option value="4 stars">4 stars</option>
-              <option value="5 star">5 stars</option>
+              <option value="5 stars">5 stars</option>
             </select>             
           </div>
         </td>
