--- a/client/src/app/video/add-new/add-new.component.html
+++ b/client/src/app/video/add-new/add-new.component.html
@@ -1,20 +1,49 @@
-<form (submit)="addVideo()">
+<form (submit)="addVideo()" [formGroup]="videoForm">
   <table align="center" class="table">
     <tr>
       <td rowspan="7">Image</td>
-      <td><b>Title</b></td>
-      <td><input type="text" class="form-control" [(ngModel)]="title" name="title" placeholder="Enter title"></td>
+    </tr>
+    <tr>
+      <td>
+          <b>*Title</b>
+          <span *ngIf="((videoForm.get('title').touched ||
+          videoForm.get('title').dirty) &&
+          videoForm.get('title').errors)" [ngClass]="{'has-error': videoForm.get('title').errors && 
+          (videoForm.get('title').touched ||
+          videoForm.get('title').dirty)}">
+            <div *ngIf="videoForm.get('title').errors.required">
+              *Title is required
+            </div>
+          </span>
+      </td>
+      <td [ngClass]="{'has-error': videoForm.get('title').errors}">
+        <div [ngClass]="{'has-error': videoForm.get('title').errors}">
+          <input type="text" class="form-control" formControlName="title" placeholder="Enter title">
+        </div>
+      </td>
     </tr>
     <tr>
       <td><b>Running Time</b></td>
-      <td><input type="text" class="form-control" [(ngModel)]="runningTime" name="runningTime" placeholder="Enter running time"></td>
+      <td><input type="text" class="form-control" formControlName="runningTime" placeholder="Enter running time"></td>
     </tr>
     <tr>
-      <td><b>Genre</b></td>
+      <td><b>*Genre</b>
+        <span *ngIf="((videoForm.get('genre').touched ||
+          videoForm.get('genre').dirty) &&
+          videoForm.get('genre').errors)" [ngClass]="{'has-error': videoForm.get('genre').errors && 
+          (videoForm.get('genre').touched ||
+          videoForm.get('genre').dirty)}">
+            <div *ngIf="videoForm.get('genre').errors.required">
+              *Genre is required
+            </div>
+        </span>
+      
+      </td>
+      
       <td>
         <div>            
-          <select name="genre" [(ngModel)]="genre">
-            <option value="Action">Action</option>
+          <select formControlName="genre" value='1'>
+            <option value="Action" selected>Action</option>
             <option value="Adventure">Adventure</option>
             <option value="Science">Science</option>
             <option value="Fiction">Fiction</option>
@@ -26,7 +55,7 @@
       <td><b>Rating</b></td>
       <td>
         <div>            
-          <select name="rating" [(ngModel)]="rating">
+          <select formControlName="rating">
             <option value="1 star">1 star</option>
             <option value="2 stars">2 stars</option>
             <option value="3 stars">3 stars</option>
@@ -38,13 +67,23 @@
     </tr>
     <tr>
       <td><b>Director</b></td>
-      <td><input type="text" class="form-control" [(ngModel)]="director" name="director" placeholder="Enter director"></td>
+      <td><input type="text" class="form-control" formControlName="director" placeholder="Enter director"></td>
     </tr>
     <tr>
-      <td><b>Status</b></td>
+      <td><b>*Status</b>
+        <span *ngIf="((videoForm.get('status').touched ||
+          videoForm.get('status').dirty) &&
+          videoForm.get('status').errors)" [ngClass]="{'has-error': videoForm.get('status').errors && 
+          (videoForm.get('status').touched ||
+          videoForm.get('status').dirty)}">
+            <div *ngIf="videoForm.get('status').errors.required">
+              *Status is required
+            </div>
+        </span>
+      </td>
       <td>
         <div>            
-          <select name="status" [(ngModel)]="status">
+          <select formControlName="status">
             <option value="Available">Available</option>
             <option value="Unavailable">Unavailable</option>
           </select>            
@@ -53,8 +92,7 @@
     </tr>
     <tr>
       <td><button class="btn btn-primary" (click)="goBack()">Back</button></td>
-      <td><button type="submit" class="btn btn-primary">Add</button></td>
+      <td><button type="submit" class="btn btn-primary" [disabled]='!videoForm.valid'>Add</button></td>
     </tr>
   </table>
 </form>
- 
